--- a/index.css
+++ b/index.css
@@ -72,13 +72,13 @@ html {
   --light-yellow: #fabc05;
   --light-red: #e94436;
   --text-zinc: #515558;
+  --purple: #;
   --font-name-head: Poppins;
   --font-name-sub: Roboto;
 }
 
 /* the container square*/
 #container {
-  border: solid 1px red;
   width: 100vmin;
   aspect-ratio: 1/1;
   margin: auto;
@@ -89,10 +89,11 @@ html {
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  border: solid 1px green;
   overflow: hidden;
   position: relative;
 }
+
+/* weird purple line */
 
 /* green circle on top */
 #green-circle {
@@ -153,6 +154,15 @@ html {
 /* gdsc logo */
 #logo-wrapper {
   width: 7vmin;
+}
+
+/* trophy */
+#trophy-wrapper {
+  position: absolute;
+
+  width: 26vmin;
+  left: 0;
+  bottom: 46%;
 }
 
 /* bottom blue square */
